fix(a11y): increase text contrast for readability

--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -32,9 +32,9 @@
   width: 140px;
   height: 40px;
   background-color: variables.$white-medium;
-  color: variables.$green-light;
+  color: variables.$green-dark;
   border-radius: 20px;
-  border: 1px variables.$green-light solid;
+  border: 1px variables.$green-dark solid;
   transition: 0.5s;
   cursor: pointer;
   &:hover,
