--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -7,7 +7,7 @@
 .footer {
   width: 100%;
   position: relative;
-  background-color: variables.$green-light;
+  background-color: variables.$green-dark;
   color: variables.$white-medium;
 }
 
