--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -135,7 +135,7 @@
   }
 
   &__link {
-    color: variables.$grey-dark;
+    color: variables.$green-dark;
     transition: 0.5s;
 
     &:hover, &:active {
